Updated the greeting page with a new profile pic, new color scheme, and a arrow button to move down the page.

--- a/index.html
+++ b/index.html
@@ -15,10 +15,16 @@
             <li><a href="#contact">Contact Me</a></li>
         </ul>
     </nav>
-    <header>
-        <h1><span id="greeting"></span> I'm Bogi!</h1>
-        <p>Welcome to my portfolio</p>
-        <img src="assets/profilePic.jpeg" alt="Profile picture" width="200" />
+    <header class="greeting-header">
+        <div class="greeting-content">
+            <div class="greeting-text">
+                <span id="greeting" class="main-greeting"></span>
+                <h1 class="main-name">I'm Boglarka Csanadi</h1>
+                <p class="main-subtitle">Take a look around my portfolio!</p>
+             </div>   
+             <img src="assets/BC_LinkedIn.PNG" alt="Profile picture" class="profile-pic" width="200" />
+        </div>
+        <a href="#about" class="down-arrow" aria-label="Scroll to About Me">&#8595;</a>
     </header>
     <section id="about">
         <h2>About Me</h2>
