Replaced the images for the projects section with new and updated ones.

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="assets/minnie.jpeg" alt="Pomodoro App" />
+                        <img src="assets/0-00ClockImage.jpg" alt="Pomodoro App" />
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="#" class="project-link">View Project</a>
@@ -124,7 +124,7 @@
                 
                 <div class="project-card">
                     <div class="project-image">
-                        <img src="assets/spiderman.jpeg" alt="TPED - Interactive Design Product" />
+                        <img src="assets/TPED_logo.jpg" alt="TPED - Interactive Design Product" />
                         <div class="project-overlay">
                             <div class="project-links">
                                 <a href="#" class="project-link">View Project</a>
