Updated the tagline and fixed overflow issue in the experience cards area.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="hero-text">
                 <span id="greeting" class="greeting"></span>
                 <h1 class="name">I'm Boglarka Csanadi</h1>
-                <p class="tagline">Computer Science Student at the University of Florida</p>
+                <p class="tagline">Future Themed Experience Designer</p>
                 <div class="cta-buttons">
                     <a href="#projects" class="btn primary">View My Work</a>
                     <a href="#contact" class="btn secondary">Get In Touch</a>
@@ -51,7 +51,7 @@
             <div class="about-content">
                 <div class="about-text">
                     <p>I'm a third-year Computer Science student at the University of Florida with the dream of becoming a Disney Imagineer or Universal Creative designer. I aspire to create immersive experiences for guests unlike anything seen before!</p>
-                    <br><p>I believe the future of theme parks and the entertainment industry lies in the hands of creative minds like mine who aim to stretch the bounds of technology with tools like AI and virtual reality.</p>
+                    <br><p>I believe the future of theme parks (and the entertainment industry as a whole) lies in the hands of creative minds, like mine, who aim to stretch the bounds of technology with tools like AI and virtual reality.</p>
                 </div>
                 
                 <div class="about-details">
