Changed the email button to green; updated the footer message.

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
     
     <footer id="contact">
         <div class="container">
-            <h2>Let's Create Magic Together</h2>
+            <h2>Let's Make the Dream Work</h2>
             <p>Ready to discuss the future of theme park technology and immersive experiences?</p>
             <div class="contact-links">
                 <a href="https://www.linkedin.com/in/boglarkacsanadi" target="_blank" class="contact-btn linkedin">
