Added ACM experience card.

--- a/index.html
+++ b/index.html
@@ -150,6 +150,16 @@
             <div class="experience-grid">
                 <div class="experience-card">
                     <div class="experience-header">
+                        <h3>Association for Computing Machinery (ACM) Member</h3>
+                        <span class="duration"> Fall 2025 - Present</span>
+                    </div>
+                    <p>University of Florida’s Largest Pre-Professional Computer Science Community</p>
+                    <ul>
+                        <li>Developed a web-based personal portfolio (The portfolio you are viewing now!)</li>
+                    </ul>
+                </div>
+                <div class="experience-card">
+                    <div class="experience-header">
                         <h3>Gator Theme Park Engineering & Design (TPED) Member</h3>
                         <span class="duration"> Fall 2025 - Present</span>
                     </div>
