Added a button that takes the user back up to the top of the page.

--- a/index.html
+++ b/index.html
@@ -224,6 +224,14 @@
             </div>
         </div>
     </footer>
+    
+    <!-- Back to Top Button -->
+    <button id="backToTop" class="back-to-top" onclick="scrollToTop()">
+        <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor">
+            <path d="M7.41 15.41L12 10.83l4.59 4.58L18 14l-6-6-6 6z"/>
+        </svg>
+    </button>
+    
     <script src="script.js"></script>
 </body>
 </html>
