Updated information on the experience cards.

--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
                     <p>University of Florida’s Largest Pre-Professional Computer Science Community</p>
                     <ul>
                         <li>Developed a web-based personal portfolio (The portfolio you are viewing now!)</li>
+                        <li>Actively involved in tech workshops and GBMs</li>
                     </ul>
                 </div>
                 <div class="experience-card">
@@ -172,14 +173,13 @@
                 
                 <div class="experience-card">
                     <div class="experience-header">
-                        <h3>Women in Computer Science and Engineering Club Member</h3>
+                        <h3>Women in Computer Science and Engineering Club (WiCSE) Member</h3>
                         <span class="duration">Fall 2024 - Present</span>
                     </div>
-                    <p>Brief description of your role and responsibilities. This can be a longer paragraph that describes your key achievements and contributions to the organization.</p>
+                    <p>Official UF student ACM-W chapter member focused on promoting women in computing</p>
                     <ul>
-                        <li>Key responsibility or achievement</li>
-                        <li>Another important accomplishment</li>
-                        <li>Skills developed or technologies used</li>
+                        <li>Actively involved in coding workshops and GBMs</li>
+                        <li>Gained valuable insights about real-world software development practices through speaker events</li>
                     </ul>
                 </div>
                 
