Updated the images and descriptions for the project cards.

--- a/index.html
+++ b/index.html
@@ -103,6 +103,25 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-image">
+                        <img src="assets/DontChessWithMeImg.png" alt="Don't Chess With Me Start Page" />
+                        <div class="project-overlay">
+                            <div class="project-links">
+                                <a href="#" class="project-link">View Project</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project-info">
+                        <h3>Don't Chess With Me</h3>
+                        <h4>Intro to Game Design and Development - 2D Unity Game Design</h4>
+                        <p>A summer class project focused on designing a 2D platformer game.</p>
+                        <p>The chess concept and design was inspired by the historic game of chess; I was inspired by the concept of a pawn's movement to the end of the board, in which it becomes a queen.</p>
+                        <div class="tech-stack">
+                            <span>Unity</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="project-card">
+                    <div class="project-image">
                         <img src="assets/0-00ClockImage.jpg" alt="Pomodoro App" />
                         <div class="project-overlay">
                             <div class="project-links">
@@ -113,6 +132,7 @@
                     </div>
                     <div class="project-info">
                         <h3>Pomodoro App (In Development)</h3>
+                        <h4>Personal Project</h4>
                         <p>A productivity tool that uses the Pomodoro Technique to help users manage their time effectively, featuring interactive elements and a playful design.</p>
                         <div class="tech-stack">
                             <span>HTML</span>
@@ -135,12 +155,37 @@
                         <h3>Trash from the Past (In Development)</h3>
                         <h4>TPED - Interactive Design Team</h4>
                         <p>A semester long group project with the TPED Interactive Design team that aims to create new interactive experiences for guests visiting the fictional DinoLand.</p>
+                        <p>Built for the fictional DinoLand, our dinosaur themed trash can features interactive elements that engage park goers and make waste management blend in with the environment.</p>
                         <div class="tech-stack">
                             <span>TBD</span>
                         </div>
                     </div>
                 </div>
                 
+                <div class="project-card">
+                    <div class="project-image">
+                        <img src="assets/BiteThatPresentationImg.png" alt="BiteThat!" />
+                        <div class="project-overlay">
+                            <div class="project-links">
+                                <a href="#" class="project-link">View Project</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project-info">
+                        <h3>BiteThat! (In Development)</h3>
+                        <h4>Intro to Software Engineering (CEN3031) - Group Project</h4>
+                        <p>A semester-long group project focused on developing a web-based application.</p>
+                        <p>This project aims to create an interactive platform for users to log meals and track their nutritional intake, as well as better understanding their dietary needs/restrictions.</p>
+                        <div class="tech-stack">
+                            <span>HTML</span>
+                            <span>CSS</span>
+                            <span>JavaScript</span>
+                            <span>Python</span>
+                            <span>SQL</span>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
